 This replaces the now deprecated `span_frames_min_duration` option.
 The difference is that the new option has more intuitive semantics for negative values (never collect stack trace) and zero (always collect stack trace). - {pull}2220[#2220]
* Add support to Jakarta EE for JAX-WS - {pull}2247[#2247]
* Add support to Jakarta EE for JAX-RS - {pull}2248[#2248]

[float]
===== Performance improvements
* Disable compression when sending data to a local APM Server

[float]
===== Bug fixes
* Fix k8s metadata discovery for containerd-cri envs - {pull}2126[#2126]
* Fixing/reducing startup delays related to `ensureInstrumented` - {pull}2150[#2150]
* Fix runtime attach when bytebuddy is in application classpath - {pull}2116[#2116]
* Fix failed integration between agent traces and host metrics coming from Beats/Elastic-Agent due to incorrect hostname
discovery - {pull}2205[#2205]
* Fix infinitely kept-alive transactions in Hikari connection pool - {pull}2210[#2210]
* Fix few Webflux exceptions and missing reactor module - {pull}2207[#2207]

[float]
===== Refactorings
* Loading the agent from an isolated class loader - {pull}2109[#2109]
* Refactorings in the `apm-agent-plugin-sdk` that may imply breaking changes for beta users of the external plugin mechanism
** `WeakMapSupplier.createMap()` is now `WeakConcurrent.buildMap()` and contains more builders - {pull}2136[#2136]
** `GlobalThreadLocal` has been removed in favor of `DetachedThreadLocal`. To make it global, use `GlobalVariables` - {pull}2136[#2136]
** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
** The `@AssignTo.*` annotations have been removed.
   Use the `@Advice.AssignReturned.*` annotations that come with the latest version of Byte Buddy.
   If your plugin uses the old annotations, it will be skipped.
   {pull}2171[#2171]
* Switching last instrumentations (`trace_methods`, sparkjava, JDK `HttpServer` and Struts 2) to