@@ -67,6 +67,7 @@
         <module>apm-servlet-jakarta-test</module>
         <module>apm-jaxws-plugin-jakartaee-test</module>
         <module>apm-jaxrs-plugin-jakartaee-test</module>
+        <module>apm-scheduled-annotation-plugin-jakartaee-test</module>
     </modules>
 
     <dependencies>
