@@ -129,7 +129,7 @@ rendering
 
 |JAX-WS
 |
-|The transactions are named based on your `@javax.jws.WebService` annotated classes and `@javax.jws.WebMethod` annotated method names (`WebServiceClass#webMethod`).
+|The transactions are named based on your `@javax.jws.WebService`, `@jakarta.jws.WebService` annotated classes and `@javax.jws.WebMethod`, `@jakarta.jws.WebMethod` annotated method names (`WebServiceClass#webMethod`).
  Note that only the packages configured in <<config-application-packages>> are scanned for JAX-WS resources.
  If you don't set this option,
  all classes are scanned.
@@ -444,7 +444,9 @@ When using a scheduling framework a transaction for every execution will be crea
 `org.springframework.scheduling.annotation.Scheduled`
 `org.springframework.scheduling.annotation.Schedules`
 `javax.ejb.Schedule`
-`javax.ejb.Schedules` in order to create a transaction with the type `scheduled`, representing the scheduled task execution
+`javax.ejb.Schedules`
+`jakarta.ejb.Schedule`
+`jakarta.ejb.Schedules` in order to create a transaction with the type `scheduled`, representing the scheduled task execution
 |1.6.0
 
 |Quartz
